# aruco_segmentation

./: CMakeLists.txt  README.md  package.xml
data/: intrinsics.yml
src/: create_arcuo_marker.cpp  detect_arcuo_marker.cpp  generate_aruco_markers.cpp  segment_plane_region.cpp
src/aruco_segmentation/: arcuo_generate.cpp
